# PPOOCC

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.langfuse.yml  main.py  pyproject.toml
apps/frontend/: package-lock.json
config/frameB/: MRC1.yaml  MRC2.yaml
data/inquiry_eval/: qa_cases.yaml
data/knowledge/: F2_knowledge.xlsx  F3_knowledge.xlsx  F3_knowledge_関東電力.xlsx
data/review_criteria/: frameB_MRC1.yaml  frameB_MRC2.yaml
data/review_eval/: gold_expectations.yaml
docs/: GCP AIエージェント開発の新動向.docx  architecture.md  claude_code_prompt_n_to_1_pipeline.md  components.md  how_to_run.md  requirements.md
docs/adk/: ADK_DESIGN.md
docs/inquiry/: ARCHITECTURE.md  DESIGN.md  REQUIREMENTS.md
docs/n_to_1_pipeline/: OVERVIEW.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md
docs/preliminary_review/: ARCHITECTURE.md  EVAL_MATRIX.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  RAG_VERIFICATION.md  REQUIREMENTS.md
frames/frameB/: MRC1.yaml
scripts/: check_excel_io.py  check_excel_scanner.py  check_n_to_1_pipeline.py  create_datastores.py  eval_review.py  generate_dummy_knowledge.py  generate_kanto_f3.py  generate_supplement_captions.py  ingest_knowledge.py  review_annotation.py  run_data_extraction.py  run_form_generation.py  structure_excel.py  test_excel_io.py  test_excel_scanner.py  verify_extraction.py  verify_rag.py
scripts/inquiry/: eval_inquiry.py
scripts/preliminary_review/: create_datastores.py  eval_review.py  generate_kanto_f3.py  generate_supplement_captions.py  (+4 more)
(+119 files in other folders)
