[project]
name = "nuro-ai-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "google-adk>=2.0.0",
    "google-cloud-aiplatform>=1.148.1",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-discoveryengine>=0.19.0",
    "google-cloud-firestore>=2.20.0",
    "google-cloud-storage>=2.18.0",
    "langfuse>=4.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "pypdf>=6.12.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
